tests/paczka2/big_fuzzy/47400686.err
Error in line 2: ByqY9Fs S33 56,0
Error in line 15: eAd21IeOuwV A936 138,63
Error in line 16: kEFPwqKjn S43 93,9
Error in line 19: kEFPwqKjn S33 -3,1
Error in line 17: kEFPwqKjn S33 72,3
Error in line 11: eAd21IeOuwV A936 30,6
Error in line 21: 4PisP S33 76,3
Error in line 28: kPgKrifn5E A936 64,9
Error in line 34: eAd21IeOuwV S43 50,83
Error in line 35: eAd21IeOuwV S43 189,1
Error in line 44: eAd21IeOuwV A936 80,9
Error in line 57: 4PisP S43 1,7
Error in line 66: 4PisP S679 56,2
Error in line 78: qtk S679 22,6
Error in line 79: qtk S33 24,3
Error in line 101: ByqY9Fs S33 94,9
Error in line 102: A936 S43 165,6
Error in line 105: A936 S33 47,6
Error in line 93: eAd21IeOuwV S679 78,4
Error in line 109: eAd21IeOuwV A936 19,0
Error in line 112: kPgKrifn5E A936 6,3
Error in line 117: qtk S33 49,2
Error in line 106: A936 A936 15,7
Error in line 124: A936 S43 -2,6
Error in line 126: ByqY9Fs A936 33,24
Error in line 143: A936 S43 919,5
Error in line 144: 4PisP S43 59,6
Error in line 146: qtk S679 54,4
Error in line 149: qtk S33 99,6
Error in line 153: kEFPwqKjn S43 421,1
Error in line 166: 4PisP A936 62,7
Error in line 167: ByqY9Fs S679 87,2
Error in line 172: ByqY9Fs S43 -5,2
Error in line 168: 4PisP S679 592,6
Error in line 162: kPgKrifn5E S43 90,7
Error in line 180: A936 A936 58,3
Error in line 185: 4PisP A936 80,5
Error in line 176: eAd21IeOuwV A936 24,3
Error in line 188: eAd21IeOuwV S679 50,7
Error in line 187: 4PisP S33 4,7
Error in line 190: eAd21IeOuwV S43 55,9
Error in line 193: eAd21IeOuwV A936 24,84
Error in line 191: 4PisP S679 40,3
Error in line 169: ByqY9Fs S43 96,9
Error in line 204: qtk S679 -1,1
Error in line 203: qtk S679 92,8
Error in line 211: kEFPwqKjn S33 24,0
Error in line 214: kPgKrifn5E S33 45,5
Error in line 201: eAd21IeOuwV S679 61,5
Error in line 227: ByqY9Fs S679 10,8
Error in line 224: 4PisP S33 11,7
Error in line 223: eAd21IeOuwV S33 92,4
Error in line 230: A936 S679 57,1
Error in line 241: A936 A936 237,19
Error in line 245: qtk S43 28,6
Error in line 246: qtk A936 48,7
